# Article_6

./: .gitignore  LICENSE  README.md  main.py  metadata_unique_values_preview.txt  pyproject.toml
data/: case_text.ipynb  case_text_processing.py  current_missing_reasons_cases.txt  data_collection.py  data_linking.ipynb  metadata_processing.py
data/additional_data/: judges.csv  judges_processed.json
data/mappings/: key_labels.json  law_system_mapping.json
ontology/: build_sample_new_parquet.py  create_schema.py  ingest_metadata.py  metadata.ttl  ontocast.ipynb  ontocast_connection_test.py  ontology.env  run_ontocast.py  seed.ttl
ontology/ontologies/: metadata.ttl  seed.ttl  seed_ontology.ttl  seed_schema.ttl
results/: data_exploration.qmd
results/exploration/: graph_descriptive_report.txt  graph_descriptive_stats.py
results/quarto/: 01-preliminary-analysis.qmd  02-legal-ontology.qmd  03-knowledge-graph.qmd  04-data-exploration.qmd  _quarto.yml  data_exploration.qmd  index.qmd  prelim_analysis.qmd
results/quarto/_book/: search.json
utils/: wikidata_query.py
